Fix veritcal alignment of searchbar mag icon

--- a/src/components/Layout/SearchBar.module.scss
+++ b/src/components/Layout/SearchBar.module.scss
@@ -27,7 +27,7 @@
 .mag {
   left: 10px;
   position: absolute;
-  top: 10px;
+  top: 12px;
 }
 
 .search-mobile {
